--- a/css/home.css
+++ b/css/home.css
@@ -124,12 +124,17 @@ body,
 }
 
 .contação h1 {
-  font-size: 11.25rem;
-  line-height: 9.1rem;
+  font-size: 9.25rem;
+  line-height: 0.8;
 }
 
 .logo-btc {
   align-self: center;
+  height: 100px;
+}
+.logo-btc svg {
+  width: 100px;
+  height: 100px;
 }
 
 .text {
@@ -243,9 +248,17 @@ body,
 /* responsivo */
 
 @media (max-width: 1280px) {
+  .logo-btc {
+    height: 70px;
+  }
+  .logo-btc svg {
+    max-width: 70px;
+    max-height: 70px;
+  }
   .btc-cotação {
     margin-left: 20px;
     margin-right: 20px;
+    height: 230px;
   }
   .bg-moeda-cotação {
     padding: 13px;
@@ -258,18 +271,34 @@ body,
     font-size: 1.75rem;
     padding: 14px 40px;
   }
+  .contação h1 {
+    font-size: 6.25rem;
+    line-height: 5.5rem;
+  }
+  .selecão-moeda-bg {
+    padding: 2px;
+  }
+  .selecão-moeda {
+    padding: 8px 16px;
+    padding-right: 30px;
+    background-image: url("/img/seta-mobile-2.svg");
+    font-size: 0.875rem;
+  }
 }
 
 @media (max-width: 980px) {
   .btc-cotação {
-    height: 230px;
+    height: 180px;
   }
   .btc-cotação {
     padding: 8px;
   }
+  .logo-btc {
+    height: 60px;
+  }
   .logo-btc svg {
-    max-width: 90px;
-    max-height: 90px;
+    max-width: 60px;
+    max-height: 60px;
   }
   .selecão-moeda-bg {
     padding: 2px;
@@ -281,8 +310,8 @@ body,
     font-size: 0.875rem;
   }
   .contação h1 {
-    font-size: 8.25rem;
-    line-height: 7rem;
+    font-size: 5.25rem;
+    line-height: 4.25rem;
   }
   .cotacao h2 {
     font-size: 2rem;
@@ -352,7 +381,6 @@ body,
   .cotacao {
     position: relative;
     overflow: auto;
-    align-items: flex-start;
     padding-bottom: 30px;
     padding-left: 20px;
     padding-right: 20px;
@@ -371,27 +399,26 @@ body,
   }
 }
 
-@media (max-width: 600px) {
-  .btc-cotação {
-    margin: 10px auto;
-    margin-left: 10px;
-    margin-right: 10px;
+@media (max-width: 720px) {
+  .cotacao {
+    align-items: flex-start;
+  }
+  .logo-btc {
+    display: none;
   }
   .title-moeda {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: relative;
+    gap: 10px;
   }
-  .logo-btc {
-    position: absolute;
-    bottom: 2px;
-    left: 24px;
-    height: 26px;
-  }
-  .logo-btc svg {
-    max-width: 26px;
-    max-height: 26px;
+}
+
+@media (max-width: 600px) {
+  .btc-cotação {
+    margin-left: 10px;
+    margin-right: 10px;
   }
   .cotacao {
     padding-top: 10px;
@@ -403,5 +430,18 @@ body,
   }
   .conteudo ul {
     gap: 20px;
+  }
+}
+
+@media (max-width: 480px) {
+  .logo-btc {
+    display: none;
+  }
+  .title-moeda {
+    gap: 8px;
+  }
+  .contação h1 {
+    font-size: 3.25rem;
+    line-height: 1.2;
   }
 }
